@@ -34,6 +34,7 @@ New user-visible features
 - (internet) Added TCP Veno congestion control algorithm
 - (internet) Added TCP Bic congestion control algorithm
 - (internet) Added TCP YeAH congestion control algorithm
+- (internet) Added H-TCP congestion control algorithm
 - (network) SocketAddressTag has been removed from the codebase.
   Users can use RecvFrom (for UDP) or GetPeerName (for TCP) instead.
 - (wifi) A new SpectrumWifiPhy physical layer model, making use of the 
